--- a/numerics-mkl-net48-paket/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-paket/numerics-mkl-net48.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>numerics_mkl_net48</RootNamespace>
     <AssemblyName>numerics-mkl-net48</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RuntimeIdentifiers>win</RuntimeIdentifiers>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
