--- a/numerics-mkl-net48/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48/numerics-mkl-net48.csproj
@@ -9,6 +9,7 @@
     <RootNamespace>numerics_mkl_net48</RootNamespace>
     <AssemblyName>numerics-mkl-net48</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
+    <RuntimeIdentifiers>win</RuntimeIdentifiers>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
@@ -52,10 +53,13 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics">
-      <Version>5.0.0-alpha03</Version>
+      <Version>5.0.0-alpha07</Version>
     </PackageReference>
     <PackageReference Include="MathNet.Numerics.MKL.Win">
-      <Version>2.6.0-beta2</Version>
+      <Version>2.6.0-beta3</Version>
+    </PackageReference>
+    <PackageReference Include="MathNet.Numerics.Providers.MKL">
+      <Version>5.0.0-alpha07</Version>
     </PackageReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
