--- a/numerics-mkl-net50-paket/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50-paket/numerics-mkl-net50.csproj
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>numerics_mkl_net50</RootNamespace>
-  </PropertyGroup>
-  <Import Project=".paket\Paket.Restore.targets" />
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RootNamespace>numerics_mkl_net50</RootNamespace>
+	</PropertyGroup>
+	<Import Project=".paket\Paket.Restore.targets" />
 </Project>
