--- a/numerics-mkl-net50/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50/numerics-mkl-net50.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
@@ -7,8 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha03" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="2.6.0-beta2" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha07" />
+    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="2.6.0-beta3" />
+    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha07" />
   </ItemGroup>
 
 </Project>
