--- a/numerics-mkl-net60-paket/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60-paket/numerics-mkl-net60.csproj
@@ -1,11 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <Project Sdk="Microsoft.NET.Sdk">
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>numerics_mkl_net60</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
-  <Import Project=".paket\Paket.Restore.targets" />
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RootNamespace>numerics_mkl_net60</RootNamespace>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
+	<Import Project=".paket\Paket.Restore.targets" />
 </Project>
