--- a/numerics-mkl-net60/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60/numerics-mkl-net60.csproj
@@ -1,16 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>numerics_mkl_net60</RootNamespace>
-    <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net6.0</TargetFramework>
+		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RootNamespace>numerics_mkl_net60</RootNamespace>
+		<ImplicitUsings>enable</ImplicitUsings>
+		<Nullable>enable</Nullable>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha03" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="2.6.0-beta2" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha07" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="2.6.0-beta3" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha07" />
+	</ItemGroup>
 
 </Project>
