--- a/numerics-mkl-net48-legacy-paket/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-legacy-paket/numerics-mkl-net48.csproj
@@ -52,6 +52,18 @@
     <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <Choose>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3' Or $(TargetFrameworkVersion) == 'v4.7' Or $(TargetFrameworkVersion) == 'v4.7.1' Or $(TargetFrameworkVersion) == 'v4.7.2')">
+      <PropertyGroup>
+        <__paket__MathNet_Numerics_MKL_Win_targets>net461\MathNet.Numerics.MKL.Win</__paket__MathNet_Numerics_MKL_Win_targets>
+      </PropertyGroup>
+    </When>
+    <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And $(TargetFrameworkVersion) == 'v4.8'">
+      <PropertyGroup>
+        <__paket__MathNet_Numerics_MKL_Win_targets>net48\MathNet.Numerics.MKL.Win</__paket__MathNet_Numerics_MKL_Win_targets>
+      </PropertyGroup>
+    </When>
+  </Choose>
   <Import Project=".paket\paket.targets" />
   <Choose>
     <When Condition="$(TargetFrameworkIdentifier) == '.NETFramework' And ($(TargetFrameworkVersion) == 'v4.6.1' Or $(TargetFrameworkVersion) == 'v4.6.2' Or $(TargetFrameworkVersion) == 'v4.6.3' Or $(TargetFrameworkVersion) == 'v4.7' Or $(TargetFrameworkVersion) == 'v4.7.1' Or $(TargetFrameworkVersion) == 'v4.7.2')">
@@ -155,5 +167,5 @@
       </ItemGroup>
     </When>
   </Choose>
-  <Import Project="packages\MathNet.Numerics.MKL.Win\build\MathNet.Numerics.MKL.Win.targets" Condition="Exists('packages\MathNet.Numerics.MKL.Win\build\MathNet.Numerics.MKL.Win.targets')" Label="Paket" />
+  <Import Project="packages\MathNet.Numerics.MKL.Win\build\$(__paket__MathNet_Numerics_MKL_Win_targets).targets" Condition="Exists('packages\MathNet.Numerics.MKL.Win\build\$(__paket__MathNet_Numerics_MKL_Win_targets).targets')" Label="Paket" />
 </Project>
