Update, cover also explicit platform targets for x86 and x64

--- a/numerics-mkl-net50-x86/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50-x86/numerics-mkl-net50.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <RootNamespace>numerics_mkl_net50</RootNamespace>
+    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
