--- a/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
@@ -7,6 +7,7 @@
 		<RootNamespace>numerics_mkl_net60</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
+		<PlatformTarget>x86</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
