--- a/numerics-mkl-net48-x64/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-x64/numerics-mkl-net48.csproj
@@ -5,6 +5,7 @@
     <TargetFramework>net48</TargetFramework>
     <RootNamespace>numerics_mkl_net48</RootNamespace>
     <AssemblyName>numerics-mkl-net48</AssemblyName>
+    <PlatformTarget>x64</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
