--- a/numerics-mkl-net48-paket/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-paket/numerics-mkl-net48.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net48</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
 		<RootNamespace>numerics_mkl_net48</RootNamespace>
 	</PropertyGroup>
 	<Import Project=".paket\Paket.Restore.targets" />
