--- a/numerics-mkl-net48-x64-paket/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-x64-paket/numerics-mkl-net48.csproj
@@ -3,9 +3,9 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net48</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
-		<RootNamespace>numerics_mkl_net48</RootNamespace>
+		<RuntimeIdentifiers>win-x64;linux-x64</RuntimeIdentifiers>
 		<PlatformTarget>x64</PlatformTarget>
+		<RootNamespace>numerics_mkl_net48</RootNamespace>
 	</PropertyGroup>
 	<Import Project=".paket\Paket.Restore.targets" />
 </Project>
