--- a/numerics-mkl-net48-x86/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-x86/numerics-mkl-net48.csproj
@@ -3,14 +3,16 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net48</TargetFramework>
+	<RuntimeIdentifiers>win-x86;linux-x86</RuntimeIdentifiers>
+	<PlatformTarget>x86</PlatformTarget>
     <RootNamespace>numerics_mkl_net48</RootNamespace>
     <AssemblyName>numerics-mkl-net48</AssemblyName>
-    <PlatformTarget>x86</PlatformTarget>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
+    <PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="2.0.0" />
+    <PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta2" />
     <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
