--- a/numerics-mkl-net48/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48/numerics-mkl-net48.csproj
@@ -1,20 +1,22 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net48</TargetFramework>
-    <RootNamespace>numerics_mkl_net48</RootNamespace>
-    <AssemblyName>numerics-mkl-net48</AssemblyName>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net48</TargetFramework>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
+		<RootNamespace>numerics_mkl_net48</RootNamespace>
+		<AssemblyName>numerics-mkl-net48</AssemblyName>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
-    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
-    <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2">
-      <PrivateAssets>all</PrivateAssets>
-      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-    </PackageReference>
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux" Version="2.0.0" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
 
 </Project>
