--- a/numerics-mkl-net50-paket/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50-paket/numerics-mkl-net50.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net5.0</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
 		<RootNamespace>numerics_mkl_net50</RootNamespace>
 	</PropertyGroup>
 	<Import Project=".paket\Paket.Restore.targets" />
