--- a/numerics-mkl-net50-x86/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50-x86/numerics-mkl-net50.csproj
@@ -1,16 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>numerics_mkl_net50</RootNamespace>
-    <PlatformTarget>x86</PlatformTarget>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifiers>win-x86;linux-x86</RuntimeIdentifiers>
+		<PlatformTarget>x86</PlatformTarget>
+		<RootNamespace>numerics_mkl_net50</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
-    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="2.0.0" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta2" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+	</ItemGroup>
 
 </Project>
