--- a/numerics-mkl-net50/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50/numerics-mkl-net50.csproj
@@ -1,15 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
-    <RootNamespace>numerics_mkl_net50</RootNamespace>
-  </PropertyGroup>
+	<PropertyGroup>
+		<OutputType>Exe</OutputType>
+		<TargetFramework>net5.0</TargetFramework>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
+		<RootNamespace>numerics_mkl_net50</RootNamespace>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
-    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux" Version="2.0.0" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+	</ItemGroup>
 
 </Project>
