--- a/numerics-mkl-net60-paket/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60-paket/numerics-mkl-net60.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
 		<RootNamespace>numerics_mkl_net60</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
