--- a/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
@@ -3,16 +3,17 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RuntimeIdentifiers>win-x86;linux-x86</RuntimeIdentifiers>
+		<PlatformTarget>x86</PlatformTarget>
 		<RootNamespace>numerics_mkl_net60</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
-		<PlatformTarget>x86</PlatformTarget>
 	</PropertyGroup>
 
 	<ItemGroup>
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="2.0.0" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta2" />
 		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
 	</ItemGroup>
 
