--- a/numerics-mkl-net60/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60/numerics-mkl-net60.csproj
@@ -3,7 +3,7 @@
 	<PropertyGroup>
 		<OutputType>Exe</OutputType>
 		<TargetFramework>net6.0</TargetFramework>
-		<RuntimeIdentifiers>win</RuntimeIdentifiers>
+		<RuntimeIdentifiers>win;linux</RuntimeIdentifiers>
 		<RootNamespace>numerics_mkl_net60</RootNamespace>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux" Version="2.0.0" />
 		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
 		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
 	</ItemGroup>
