--- a/numerics-mkl-net48-x86/numerics-mkl-net48.csproj
+++ b/numerics-mkl-net48-x86/numerics-mkl-net48.csproj
@@ -10,10 +10,10 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-    <PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="2.0.0" />
-    <PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta2" />
-    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+    <PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha10" />
+    <PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="3.0.0-beta3" />
+    <PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta3" />
+    <PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha10" />
     <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
