--- a/numerics-mkl-net50/numerics-mkl-net50.csproj
+++ b/numerics-mkl-net50/numerics-mkl-net50.csproj
@@ -8,10 +8,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-		<PackageReference Include="MathNet.Numerics.MKL.Linux" Version="2.0.0" />
-		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta2" />
-		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha10" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux" Version="3.0.0-beta3" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win" Version="3.0.0-beta3" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha10" />
 	</ItemGroup>
 
 </Project>
