--- a/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
+++ b/numerics-mkl-net60-x86/numerics-mkl-net60.csproj
@@ -11,10 +11,10 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha08" />
-		<PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="2.0.0" />
-		<PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta2" />
-		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha08" />
+		<PackageReference Include="MathNet.Numerics" Version="5.0.0-alpha10" />
+		<PackageReference Include="MathNet.Numerics.MKL.Linux-x86" Version="3.0.0-beta3" />
+		<PackageReference Include="MathNet.Numerics.MKL.Win-x86" Version="3.0.0-beta3" />
+		<PackageReference Include="MathNet.Numerics.Providers.MKL" Version="5.0.0-alpha10" />
 	</ItemGroup>
 
 </Project>
